; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_set_quat.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_set_quat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.quat = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [2 x i8] c"x\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"y\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"z\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, %struct.quat*, i32 (i32*, i8*, i32*)*)* @set_quat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_quat(i32* %0, i8* %1, %struct.quat* %2, i32 (i32*, i8*, i32*)* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.quat*, align 8
  %8 = alloca i32 (i32*, i8*, i32*)*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.quat* %2, %struct.quat** %7, align 8
  store i32 (i32*, i8*, i32*)* %3, i32 (i32*, i8*, i32*)** %8, align 8
  %10 = call i32* (...) @obs_data_create()
  store i32* %10, i32** %9, align 8
  %11 = load i32*, i32** %9, align 8
  %12 = load %struct.quat*, %struct.quat** %7, align 8
  %13 = getelementptr inbounds %struct.quat, %struct.quat* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @obs_data_set_double(i32* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i32*, i32** %9, align 8
  %17 = load %struct.quat*, %struct.quat** %7, align 8
  %18 = getelementptr inbounds %struct.quat, %struct.quat* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @obs_data_set_double(i32* %16, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  %21 = load i32*, i32** %9, align 8
  %22 = load %struct.quat*, %struct.quat** %7, align 8
  %23 = getelementptr inbounds %struct.quat, %struct.quat* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @obs_data_set_double(i32* %21, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i32 %24)
  %26 = load i32*, i32** %9, align 8
  %27 = load %struct.quat*, %struct.quat** %7, align 8
  %28 = getelementptr inbounds %struct.quat, %struct.quat* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @obs_data_set_double(i32* %26, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i32 %29)
  %31 = load i32 (i32*, i8*, i32*)*, i32 (i32*, i8*, i32*)** %8, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = load i8*, i8** %6, align 8
  %34 = load i32*, i32** %9, align 8
  %35 = call i32 %31(i32* %32, i8* %33, i32* %34)
  %36 = load i32*, i32** %9, align 8
  %37 = call i32 @obs_data_release(i32* %36)
  ret void
}

declare dso_local i32* @obs_data_create(...) #1

declare dso_local i32 @obs_data_set_double(i32*, i8*, i32) #1

declare dso_local i32 @obs_data_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
